unpackaged/main/default/objects/Email_Autoreply_Rule__mdt/Email_Autoreply_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Email Autoreply Rule</label>
    <pluralLabel>Email Autoreply Rules</pluralLabel>
</CustomObject>