unpackaged/main/default/objects/Email_Autoreply_Rule__mdt/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>