unpackaged/main/default/objects/Email_Autoreply_Rule__mdt/fields/Addresses__c.field-meta.xml
<CustomField>
    <fullName>Addresses__c</fullName>
    <label>Addresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>