unpackaged/main/default/objects/Email_Autoreply_Rule__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>