unpackaged/main/default/objects/Email_Autoreply_Rule__mdt/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <label>Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>