unpackaged/main/default/objects/Email_Autoreply_Rule__mdt/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <label>Keywords</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>